--- a/templates/base_dashboard.html
+++ b/templates/base_dashboard.html
@@ -151,13 +151,13 @@
             <div class="menu-item rounded-xl">
               <a href="{% url 'venue_dashboard' %}" class="flex items-center px-4 py-3 text-gray-600 hover:text-gray-900 hover:bg-gray-50 rounded-xl transition-all" :class="{ 'justify-center': !desktopOpen && !mobileOpen, 'space-x-3': desktopOpen || mobileOpen }">
                 <i class="fa-solid fa-store w-5 text-center text-gray-500 flex-shrink-0"></i>
-                <span class="font-medium whitespace-nowrap" x-show="desktopOpen || mobileOpen" x-transition>Manage Venue</span> 
+                <span class="font-medium whitespace-nowrap" x-show="desktopOpen || mobileOpen" x-transition>Kelola Lapangan</span> 
               </a>
             </div>
             <div class="menu-item rounded-xl">
               <a href="{% url 'venue_revenue' %}" class="flex items-center px-4 py-3 text-gray-600 hover:text-gray-900 hover:bg-gray-50 rounded-xl transition-all" :class="{ 'justify-center': !desktopOpen && !mobileOpen, 'space-x-3': desktopOpen || mobileOpen }">
                 <i class="fa-solid fa-chart-line w-5 text-center text-gray-500 flex-shrink-0"></i>
-                <span class="font-medium whitespace-nowrap" x-show="desktopOpen || mobileOpen" x-transition>Revenue Report</span> 
+                <span class="font-medium whitespace-nowrap" x-show="desktopOpen || mobileOpen" x-transition>Laporan</span> 
               </a>
             </div>
 
